Feat/217sync game over (#221)
* [refactor] server yml update로 변경

* feat: implement game over synchronization for Relay/P2P mode with You Win/Lose popup

* [Fix] 로컬 실행 오류

* [Feat] 릴레이모드 GameOver 동기화

* [Feat] Preview 연동 기능

* [Feat] OpponentView 레이아웃 통일

* [Feat] 매칭 대기열 구현

* [Fix] 릴레이 모드 카운트다운 동기화 문제